2008-11-17  Andreas Henriksson <andreas@fatal.se>

	reviewed by: Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c:
	(ftp_connection_ensure_data_connection_epsv),
	(ftp_connection_ensure_data_connection_pasv):
	Add workarounds for EPSV/PASV data connection failures.
	- don't use EPSV if we get successful return codes but fails to
	connect.
	- don't use address in PASV response if we fail to connect to it
	 (use the same address as the command connection is established to).

2008-11-17  Andreas Henriksson <andreas@fatal.se>

	reviewed by: Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c:
	(_ftp_connection_ensure_data_connection),
	(ftp_connection_ensure_data_connection_epsv),
	(ftp_connection_ensure_data_connection_pasv),
	(ftp_connection_ensure_data_connection):
	Restructure ..._ensure_data_connection and fall back on PASV when EPSV
	fails.
	- split up ..._ensure_data_connection in subroutines
	- make a full attempt to connect instead of relying on response
	  code from EPSV command.
	- when EPSV data connection fails, try PASV.

2008-11-17  Andreas Henriksson <andreas@fatal.se>

	reviewed by: Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_use):
	 Disable usage of "EPSV ALL". (fixes #547855). See in-source comment
	 for the reasons.

2008-11-17  Andreas Henriksson <andreas@fatal.se>

	reviewed by: Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_use):
	Use UTF8 when available.

2008-11-17  Andreas Henriksson <andreas@fatal.se>

	reviewed by: Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_parse_features):
	Add UTF8 to feature parsing.

2008-11-10  Tomas Bzatek  <tbzatek@redhat.com>

	* daemon/gvfsbackendsmb.c:
	* daemon/libsmb-compat.h:
	Timestamp (mtime) setting support

2008-11-06  Hans Petter Jansson  <hpj@novell.com>

	* gconf/gapplookupgconf.c (get_default_for_uri_scheme): Free command
	string after use. Fixes a leak.
